--- a/src/App.css
+++ b/src/App.css
@@ -365,7 +365,7 @@ form .btn {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 
-/*  .testimonials-container .card-img.img-1 {
+  .testimonials-container .card-img.img-1 {
     background: url("./img/testimonial-1.jpg") no-repeat center center/cover;
   }
   
@@ -381,7 +381,7 @@ form .btn {
   .testimonials-container .card-img.img-4 {
     background: url("./img/testimonial-4.jpg") no-repeat center top/cover;
     background-size: 120%;
-  } */
+  }
 /* todo: Update testimonial */
 
 .testimonial:nth-child(odd) {
